# Modern-CPP-Programming

./: .gitignore  CMakeLists.txt  README.md  cppcheck_report.txt
.github/workflows/: cigit.yml
App/: CMakeLists.txt
App/include/: App.hpp
App/src/: App.cpp
IOperation/: CMakeLists.txt
IOperation/include/: IOperation.hpp
IOperation/src/: IOperation.cpp
config/: .clang-format
src/: imdbdataanalyze.cpp  main.cpp
tests/: CMakeLists.txt  unittests.cpp
